force-app/main/default/objects/HPEAPRequest__c/HPEAPRequest__c.object-meta.xml
<CustomObject>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>HPEAP Request</label>
    <nameField>
        <displayFormat>HP-{00000}</displayFormat>
        <label>HPEAP Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HPEAP Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>