force-app/main/default/objects/HPEAPRequest__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>PacPoint-MV082719 - Created for HPEAP Transcript Request</description>
    <formula>VALUE(TEXT(TranscriptQuantity__c)) * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>