force-app/main/default/objects/HPEAPRequest__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Billing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>