force-app/main/default/objects/HPEAPRequest__c/fields/BillingCity__c.field-meta.xml
<CustomField>
    <fullName>BillingCity__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Billing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>