force-app/main/default/objects/HPEAPRequest__c/fields/BillingStateProvinceRegion__c.field-meta.xml
<CustomField>
    <fullName>BillingStateProvinceRegion__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Billing State/Province/Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>