force-app/main/default/objects/HPEAPRequest__c/fields/DateTranscriptsSentOut__c.field-meta.xml
<CustomField>
    <fullName>DateTranscriptsSentOut__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request
PacPoint-KN061819 - Modified for HPEAP Transcript Request</description>
    <label>Date Transcripts Sent Out</label>
    <type>Date</type>
</CustomField>