force-app/main/default/objects/HPEAPRequest__c/fields/Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Disclaimer__c</fullName>
    <defaultValue>&quot;&lt;div style=&apos;border-top: 1px dotted #ccc;margin-top: 9px;padding-bottom: 0;padding-left: 9px;padding-top: 13px;width: 97%;&apos;&gt;&lt;p&gt;You will receive a notification via email the day the transcript is mailed out or the day the transcript is ready for pickup. Unclaimed or undeliverable transcripts will be destroyed after 30 days and no refund will be issued.&lt;br/&gt;&lt;br/&gt;If requesting pickup, you must present a valid photo ID when picking up your transcript.&lt;br/&gt;&lt;br/&gt;In order for a third party to pick up your transcript, you must provide the person with written, signed authorization. The person will be required to show your written authorization and his or her photo ID at the time of pick-up.&lt;br/&gt;&lt;br/&gt;By typing your name in the signature block below, you affirm that you are the person above requesting the transcript, understand the before mentioned disclaimer, and have entered the correct information to the best of your knowledge.&lt;/p&gt;&lt;/div&gt;&quot;</defaultValue>
    <description>PacPoint-FT061119 - Created for HPEAP Transcript Request</description>
    <label>DISCLAIMER</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>