force-app/main/default/objects/HPEAPRequest__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>