force-app/main/default/objects/HPEAPRequest__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>