force-app/main/default/objects/HPEAPRequest__c/fields/LAST4OfSSN__c.field-meta.xml
<CustomField>
    <fullName>LAST4OfSSN__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>LAST 4 of SSN</label>
    <length>4</length>
    <type>Text</type>
</CustomField>