force-app/main/default/objects/HPEAPRequest__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>