force-app/main/default/objects/HPEAPRequest__c/fields/LastYearAttended__c.field-meta.xml
<CustomField>
    <fullName>LastYearAttended__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Last Year Attended</label>
    <length>100</length>
    <type>Text</type>
</CustomField>