force-app/main/default/objects/HPEAPRequest__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Mailing Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>