force-app/main/default/objects/HPEAPRequest__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>