force-app/main/default/objects/HPEAPRequest__c/fields/MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>MailingCountry__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Mailing Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>United States</fullName>
            </value>
            <value>
                <fullName>United Kingdom</fullName>
            </value>
            <value>
                <fullName>Canada</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Netherlands</fullName>
            </value>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
            <value>
                <fullName>----------------</fullName>
            </value>
            <value>
                <fullName>Afghanistan</fullName>
            </value>
            <value>
                <fullName>Albania</fullName>
            </value>
            <value>
                <fullName>Algeria</fullName>
            </value>
            <value>
                <fullName>Andorra</fullName>
            </value>
            <value>
                <fullName>Angola</fullName>
            </value>
            <value>
                <fullName>Antigua &amp; Deps</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Armenia</fullName>
            </value>
            <value>
                <fullName>Austria</fullName>
            </value>
            <value>
                <fullName>Azerbaijan</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Bahrain</fullName>
            </value>
            <value>
                <fullName>Bangladesh</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Belarus</fullName>
            </value>
            <value>
                <fullName>Belgium</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Benin</fullName>
            </value>
            <value>
                <fullName>Bhutan</fullName>
            </value>
            <value>
                <fullName>Bolivia</fullName>
            </value>
            <value>
                <fullName>Bosnia Herzegovina</fullName>
            </value>
            <value>
                <fullName>Botswana</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>