force-app/main/default/objects/HPEAPRequest__c/fields/MailingPostalZipcode__c.field-meta.xml
<CustomField>
    <fullName>MailingPostalZipcode__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Mailing Postal/Zipcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>