force-app/main/default/objects/HPEAPRequest__c/fields/MailingStateProvinceRegion__c.field-meta.xml
<CustomField>
    <fullName>MailingStateProvinceRegion__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Mailing State/Province/Region</label>
    <length>80</length>
    <type>Text</type>
</CustomField>