force-app/main/default/objects/HPEAPRequest__c/fields/MailToName__c.field-meta.xml
<CustomField>
    <fullName>MailToName__c</fullName>
    <description>PacPoint KN061919 - Created for HPEAP Transcript Request</description>
    <inlineHelpText>Name the transcript is being mailed to. If you are requesting the transcript(s) be mailed, all transcripts you request will be sent to this name and address. If you would like transcripts sent to more than one address, please email: hpeap@dcca.hawaii.gov.</inlineHelpText>
    <label>Mail To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>