force-app/main/default/objects/HPEAPRequest__c/fields/Middle__c.field-meta.xml
<CustomField>
    <fullName>Middle__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Middle</label>
    <length>40</length>
    <type>Text</type>
</CustomField>