force-app/main/default/objects/HPEAPRequest__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>