force-app/main/default/objects/HPEAPRequest__c/fields/PostSecondaryEducation__c.field-meta.xml
<CustomField>
    <fullName>PostSecondaryEducation__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Post Secondary Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heald College</fullName>
            </value>
            <value>
                <fullName>Argosy University</fullName>
            </value>
            <value>
                <fullName>World Medicine Institute (WMI)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>