force-app/main/default/objects/HPEAPRequest__c/fields/ProgramOfStudy__c.field-meta.xml
<CustomField>
    <fullName>ProgramOfStudy__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Program of Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>