force-app/main/default/objects/HPEAPRequest__c/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <description>PacPoint-KN061819 - Created for HPEAP Transcript Request</description>
    <label>Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>