force-app/main/default/objects/HPEAPRequest__c/fields/SignatureFirstName__c.field-meta.xml
<CustomField>
    <fullName>SignatureFirstName__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Signature First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>