force-app/main/default/objects/HPEAPRequest__c/fields/SignatureLastName__c.field-meta.xml
<CustomField>
    <fullName>SignatureLastName__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Signature Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>