force-app/main/default/objects/HPEAPRequest__c/fields/ThirdPartyRequests__c.field-meta.xml
<CustomField>
    <fullName>ThirdPartyRequests__c</fullName>
    <description>PacPoint KN070519 - Created for HPEAP Transcript Request</description>
    <formula>IF
(
(
(SignatureFirstName__c &lt;&gt; FirstName__c
|| 

SignatureLastName__c &lt;&gt; LastName__c)
&amp;&amp; 

(SignatureFirstName__c &lt;&gt; &quot;&quot;
|| 

SignatureLastName__c &lt;&gt; &quot;&quot;)

)
,True , False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This flag is automatically checked if the First Name and Last name does not match the Signature.  It is assumed that if they don&apos;t match then they are requests from third parties.</inlineHelpText>
    <label>Third Party Requests</label>
    <type>Checkbox</type>
</CustomField>