force-app/main/default/objects/HPEAPRequest__c/fields/TranscriptDeliveryMethod__c.field-meta.xml
<CustomField>
    <fullName>TranscriptDeliveryMethod__c</fullName>
    <description>PacPoint-KN051719 - Created for HPEAP Transcript Request</description>
    <label>Transcript Delivery Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I will pick up the Transcript in person</fullName>
            </value>
            <value>
                <fullName>Please mail the Transcript</fullName>
            </value>
            <value>
                <fullName>Please mail me the Transcript</fullName>
                <isActive>false</isActive>
                <label>Please mail me the Transcript</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>