force-app/main/default/objects/HPEAPRequest__c/fields/TranscriptQuantity__c.field-meta.xml
<CustomField>
    <fullName>TranscriptQuantity__c</fullName>
    <description>PacPoint KN061919 - Created for HPEAP Transcript Request</description>
    <inlineHelpText>How many copies of your transcript would you like?  The charge is $10 per transcript.</inlineHelpText>
    <label>Transcript Quantity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>