force-app/main/default/objects/HPEAPRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>TranscriptQuantity__c</columns>
    <columns>Amount__c</columns>
    <columns>PostSecondaryEducation__c</columns>
    <columns>LAST4OfSSN__c</columns>
    <columns>Email__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DateTranscriptsSentOut__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>