force-app/main/default/objects/HPEAPRequest__c/listViews/AllUnpaidRequests.listView-meta.xml
<ListView>
    <fullName>AllUnpaidRequests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TranscriptQuantity__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>SignatureFirstName__c</columns>
    <columns>SignatureLastName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unpaid</value>
    </filters>
    <label>All - Unpaid Requests</label>
</ListView>