force-app/main/default/objects/HPEAPRequest__c/listViews/ExcludingThirdPartyUnfulfilled.listView-meta.xml
<ListView>
    <fullName>ExcludingThirdPartyUnfulfilled</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TranscriptQuantity__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>SignatureFirstName__c</columns>
    <columns>SignatureLastName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ThirdPartyRequests__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>DateTranscriptsSentOut__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Unpaid,Paid</value>
    </filters>
    <label>Excluding Third Party - Unfulfilled</label>
</ListView>