force-app/main/default/objects/HPEAPRequest__c/listViews/ThirdPartyUnfulfilledRequests.listView-meta.xml
<ListView>
    <fullName>ThirdPartyUnfulfilledRequests</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>TranscriptQuantity__c</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>SignatureFirstName__c</columns>
    <columns>SignatureLastName__c</columns>
    <columns>DateTranscriptsSentOut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ThirdPartyRequests__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>DateTranscriptsSentOut__c</field>
        <operation>equals</operation>
    </filters>
    <label>Third Party - Unfulfilled Requests</label>
</ListView>